# skeleton_tracker

./: .gitignore  CMakeLists.txt  README.md  package.xml  tsc_readme.md
config/: config.ini  config2.ini
include/skeleton_tracker/: xtion_tracker.hpp
launch/: tracker.launch
msg/: SkeletonComplete.msg  joint_message.msg  robot_message.msg  skeleton_complete.msg  skeleton_message.msg  skeleton_tracker_state.msg  user_IDs.msg
scripts/: data_deleter.py  data_logging.py  demand_activity_rec_action_task.py  read_camera_clib.py  simple_sk_images_logging.py  skeleton_action.py  skeleton_publisher.py  skeleton_transform.py
src/: tracker_publisher.cpp  xtion_tracker_node.cpp
srv/: DeleteImages.srv
